[package]
name = "ray-tracer-wasm"
version = "0.1.0"
authors = ["Benjamin Shi <aiifabbf@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = { version = "*", features = ["wasm-bindgen"] }
image = "*"
wasm-bindgen = "*"
console_error_panic_hook = "*"
wee_alloc = "*"
ray-tracer = { path = "../ray-tracer" }